# gndict-rst

./: .env.example  CHANGELOG.md  Cargo.toml  README.md
data/: common-eu-words.txt  species-black.txt  uninomials-black.txt
src/: assets.rs  conf.rs  db.rs  download.rs  error.rs  main.rs  output.rs  pg.rs
