[package]
name = "gndict"
version = "0.1.0"
authors = ["Dmitry Mozzherin <dmozzherin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv="0.15"
thiserror="1"
clap="2"
postgres = "0.17"
fallible-iterator = "*"
log = "0.4"
stderrlog = "0.4"
rust-embed = "5"
